devops/config/apiportalbff.yaml
##################################################################################################
# apiportalbff service (based on Reviews service)
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: apiportalbff
  labels:
    app: apiportalbff
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: apiportalbff
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: apiportalbff
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: apiportalbff
        version: v1
    spec:
      containers:
      - name: apiportalbff
        image: dennisseidel/apiportalbff:v3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
---
