devops/config/deployment.yaml
##################################################################################################
# sample-repo service (based on Reviews service)
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: sample-repo
  labels:
    app: sample-repo
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: sample-repo
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sample-repo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sample-repo
        version: v1
    spec:
      containers:
      - name: sample-repo
        image: dennisseidel/sample-repo:$version
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
---
