devops/config/gateway.yaml
# apiVersion: networking.istio.io/v1alpha3
# kind: Gateway
# metadata:
#   name: apiportal-gateway
# spec:
#   selector:
#     istio: ingressgateway # use istio default controller
#   servers:
#   - port:
#       number: 80
#       name: http
#       protocol: HTTP
#     hosts:
#     - "open.d10l.de"
#     - "api.d10l.de"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: $APINAME
spec:
  hosts:
  - "api.d10l.de"
  gateways:
  - apiportal-gateway
  http:
  - match:
    - uri:
        prefix: /$APINAME
    rewrite:
      uri: /
    route:
    - destination:
        host: $APINAME
        port:
          number: 9080
